# nexus

./: CMakeLists.txt  README.md
casestudy/: README.md  casestudy.cpp
cmake/: FindSparseHash.cmake
libdivsufsort/lib/: libdivsufsort.so.3  libdivsufsort.so.3.0.1  libdivsufsort64.so.3  libdivsufsort64.so.3.0.1
longestcommonprefix/: longestCommonPrefix.cpp  longestCommonPrefix.h
metadata/: metadata_EColi_pangenome.tsv
radixSA64/: MergeSorter.h  RadixLSDCache.h  radix.h  utils.h
search_schemes/01star0/: name.txt
search_schemes/01star0/1/: static_partitioning.txt
search_schemes/01star0/2/: dynamic_partitioning.txt  searches.txt
search_schemes/01star0/4/: dynamic_partitioning.txt  searches.txt  static_partitioning.txt
search_schemes/01star0/5/: searches.txt
search_schemes/01star0_adapted/: name.txt
search_schemes/01star0_adapted/1/: dynamic_partitioning.txt  searches.txt
search_schemes/01star0_adapted/2/: static_partitioning.txt
search_schemes/01star0_adapted/3/: dynamic_partitioning.txt  searches.txt  static_partitioning.txt
search_schemes/01star0_adapted/4/: searches.txt
search_schemes/01star0_adapted/5/: searches.txt
search_schemes/kianfar/: name.txt
search_schemes/kianfar/1/: searches.txt
search_schemes/kianfar/2/: dynamic_partitioning.txt  searches.txt  static_partitioning.txt
search_schemes/kianfar/3/: dynamic_partitioning.txt  searches.txt  static_partitioning.txt
search_schemes/kianfar/4/: dynamic_partitioning.txt  searches.txt  static_partitioning.txt
search_schemes/kuch_k+1/: name.txt
search_schemes/kuch_k+1/2/: searches.txt
search_schemes/kuch_k+1/3/: dynamic_partitioning.txt  searches.txt  static_partitioning.txt
search_schemes/kuch_k+1/4/: dynamic_partitioning.txt  searches.txt  static_partitioning.txt
search_schemes/kuch_k+1_adapted/: name.txt
search_schemes/kuch_k+1_adapted/1/: searches.txt
search_schemes/kuch_k+1_adapted/2/: dynamic_partitioning.txt  searches.txt  static_partitioning.txt
search_schemes/kuch_k+1_adapted/3/: dynamic_partitioning.txt  searches.txt  static_partitioning.txt
search_schemes/kuch_k+1_adapted/4/: dynamic_partitioning.txt  searches.txt  static_partitioning.txt
search_schemes/kuch_k+2/: name.txt
search_schemes/kuch_k+2/1/: static_partitioning.txt
search_schemes/kuch_k+2/2/: dynamic_partitioning.txt  searches.txt
search_schemes/kuch_k+2/3/: searches.txt
search_schemes/kuch_k+2/4/: searches.txt  static_partitioning.txt
search_schemes/kuch_k+2_adapted/: name.txt
search_schemes/kuch_k+2_adapted/1/: searches.txt
search_schemes/kuch_k+2_adapted/2/: searches.txt  static_partitioning.txt
search_schemes/kuch_k+2_adapted/3/: dynamic_partitioning.txt  searches.txt  static_partitioning.txt
search_schemes/kuch_k+2_adapted/4/: dynamic_partitioning.txt  searches.txt
search_schemes/manbest/: name.txt
search_schemes/manbest/4/: dynamic_partitioning.txt  searches.txt  static_partitioning.txt
search_schemes/pigeon/: name.txt
search_schemes/pigeon/2/: searches.txt
search_schemes/pigeon/3/: searches.txt
search_schemes/pigeon/4/: searches.txt
search_schemes/pigeon/5/: searches.txt
search_schemes/pigeon_adapted/: name.txt
search_schemes/pigeon_adapted/1/: searches.txt
search_schemes/pigeon_adapted/4/: searches.txt
search_schemes/pigeon_adapted/5/: searches.txt
src/: alphabet.h  bandmatrix.h  benchmarking.cpp  benchmarking.h  bitvec.h  buildDBG.cpp  buildIndexAuxiliary.cpp  buildIndexAuxiliary.h  bwtrepr.h  cluster.h  createStyles.cpp  encodedtext.h  fmindex.cpp  fmindex.h  fmindexDBG.cpp  fmindexDBG.h  fmocc.cpp  fmocc.h  fmpos.cpp  fmpos.h  fmposext.h  globalParameters.h  main.cpp  mainDBG.cpp  mainstats.cpp  mappingpair.h  node.h  nucleotide.cpp  nucleotide.h  range.cpp  range.h  rankinterface.h  rankselectinterface.h  sarangepair.h  search.cpp  search.h  searchstrategy.cpp  searchstrategy.h  selectinterface.h  strainfreemapper.cpp  (+9 more)
sux/bits/: DynamicBitVector.hpp  EliasFano.hpp  Rank.hpp  Rank9.hpp  Rank9Sel.hpp  Select.hpp  SelectZero.hpp  SimpleSelect.hpp  SimpleSelectHalf.hpp  SimpleSelectZero.hpp  SimpleSelectZeroHalf.hpp
sux/util/: Expandable.hpp  Vector.hpp
